@@ -1,3 +1,8 @@
+2006-04-18 njh <njh@njhurst.com>
+	* share/extensions/measure.inx, share/extensions/measure.py, share/extensions/Makefile.am
+
+	  Added the measure extension that marks lengths onto paths.
+
 2006-04-17  MenTaLguY  <mental@rydia.net>
 
 	* src/application/editor.cpp, src/arc-context.cpp, src/conn-avoid-ref.cpp,
